# wasm-airline

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
src/: app.rs  best_prices.rs  gql.rs  index.rs  lib.rs  reccomendation.rs
static/: index.html  styles.css
